--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,21 +17,21 @@
                         <i class="material-icons">dashboard</i>
                         <p class="hidden-lg hidden-md">Dashboard</p>
                     </a>
-                </li> -->
+                </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">notifications</i>
                         <span class="notification">5</span>
                         <p class="hidden-lg hidden-md">Notifications</p>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Nuevos Pedido #1</a></li>
-                        <li><a href="#">Nuevos Pedido #2</a></li>
-                        <li><a href="#">Nuevos Pedido #3</a></li>
-                        <li><a href="#">Nuevos Pedido #4</a></li>
-                        <li><a href="#">Nuevos Pedido #5</a></li>
+                        <li><a href="">Nuevos Pedido #1</a></li>
+                        <li><a href="">Nuevos Pedido #2</a></li>
+                        <li><a href="">Nuevos Pedido #3</a></li>
+                        <li><a href="">Nuevos Pedido #4</a></li>
+                        <li><a href="">Nuevos Pedido #5</a></li>
                     </ul>
-                </li>
+                </li> -->
                 <li>
                     <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
                        <i class="material-icons">person</i>
