--- a/src/app/pages/home/table-list/table-list.component.html
+++ b/src/app/pages/home/table-list/table-list.component.html
@@ -55,6 +55,7 @@
                             </tbody>
                         </table>
                     </div>
+                    <button class="btn btn-primary btn-block" (click)="VerNotificacion('bottom','center')">Notificacion</button>
                 </div>
             </div>
         </div>
@@ -101,8 +102,11 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              
             <!--  <button type="button" class="btn btn-primary" (click)="Load()">Save changes</button> -->
             </div>
           </div>
         </div>
       </div>
+<!--
+<toaster-container></toaster-container>-->
