--- a/src/app/pages/home/table-list/table-list.component.html
+++ b/src/app/pages/home/table-list/table-list.component.html
@@ -55,7 +55,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <button class="btn btn-primary btn-block" (click)="VerNotificacion('bottom','center')">Notificacion</button>
+                   <!-- <button class="btn btn-primary btn-block" (click)="VerNotificacion('bottom','center')">Notificacion</button> -->
                 </div>
             </div>
         </div>
